concord_macros/tests/v5/dsl/fail/fail_auth_any.stderr
error: auth any/all groups are not supported in v5; write multiple auth lines for required auth
  --> tests/v5/dsl/fail/fail_auth_any.rs:14:27
   |
14 |         auth any { bearer a_key bearer b_key }
   |                           ^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/v5/dsl/fail/fail_auth_any.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
